MFC	r292872:

ext2: recognize ext4 INCOMPAT_RECOVER flag

This is a flag specific for journalling in ext4.
Add it to the list of ext4 features we ignore for
read-only purposes.

PR:		205668

Former-commit-id: 775c1d98792a030442620a450b06f06327a81066